tests/transpiler/x/swift/in_operator_extended.swift
// Generated by Mochi transpiler v0.10.32 on 2025-07-21 07:21:12 GMT+7
let xs = [1, 2, 3]
let ys = ({ var _res: [[String: Any]] = []
for x in xs {
    if ((x % 2) == 1) {
        _res.append(x)
    }
}
return _res })()
print((ys.contains(1)))
print((ys.contains(2)))
let m = ["a": 1]
print((m["a"] != nil))
print((m["b"] != nil))
let s = "hello"
print((s.contains("ell")))
print((s.contains("foo")))
